--- a/exampleSite/config/_default/config.toml
+++ b/exampleSite/config/_default/config.toml
@@ -1,7 +1,7 @@
-baseURL = "https://example.com"
+baseURL = "https://othernal.my.id"
 languageCode = "en"
 DefaultContentLanguage = "en"
-title = "Website of Jane Doe"
+title = "Website of Nal Farid"
 
 # theme as hugo module
 #theme = "github.com/lxndrblz/anatole"
@@ -16,7 +16,7 @@ enableRobotsTXT = true
 #disqusShortname = ""
 
 # Google Analytics
-#googleAnalytics = "UA-123-45"
+#googleAnalytics = ""
 
 # Syntax highlighting
 pygmentsUseClasses = true   
