--- a/exampleSite/config/_default/params.toml
+++ b/exampleSite/config/_default/params.toml
@@ -1,9 +1,9 @@
 
-title = "I'm Jane Doe"
-author = "Jane Doe"
+title = "I'm Nal"
+author = "Nal Farid"
 #copyright = "2020-2021"
-description = "Call me Jane"
-profilePicture = "images/profile.jpg"
+description = "Call me Nal"
+profilePicture = "images/enal-pic.jpeg"
 keywords = ""
 favicon = "favicons/"
 # example ["css/custom.css"]
