--- a/exampleSite/data/portfolio.yml
+++ b/exampleSite/data/portfolio.yml
@@ -2,55 +2,54 @@ portfolioitems:
   # portfolio category
   - title: Coding Projects
     portfolioitem:
-      - name: Project 1
-        image: '/images/portfolio/code.jpg'
-        link: https://gohugo.io/
+      - name: Modernization Offeo Web
+        image: '/images/portfolio/offeo.png'
+        link: https://offeo.com
         linktext: 'Visit project website'
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.'
+        description: 'Migration offeo web from Nuxt 2 to Nuxt 3.'
         tags:
-          - Tag 1
-          - Tag 2
+          - Nuxt 3
+          - AWS
         status: 'Finished'
-        start: '2020'
-        end: '2021'
+        start: '2023'
+        end: '2023'
         authors:
-          - lxndrblz
-          - alexanderdavide
-      - name: Project 2
-        image: '/images/portfolio/code.jpg'
-        link: https://gohugo.io/
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.'
-        status: 'On Hold'
-        tags:
-          - Tag 1
-          - Tag 2
-      - name: Project 3
-        link: https://gohugo.io/
+          - Nal Farid
+      - name: Offeo Team feature
+        image: '/images/portfolio/offeo-2.png'
+        link: https://offeo.com/
+        description: 'New feature offeo for team video creator'
         status: 'Finished'
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.'
         tags:
-          - Tag 1
-          - Tag 2
+          - Laravel
+          - Nuxt 3
+      - name: Offeo REST API
+        link: https://offeo.com/
+        status: 'Finished'
+        description: 'Build offeo backend REST API'
+        tags:
+          - Laravel
+          - MySql
   # portfolio category
   - title: Research
     portfolioitem:
-      - name: Project 1
-        image: '/images/portfolio/code.jpg'
-        description: 'This project does not have a link attribute'
+      - name: Loka Academy
+        image: '/images/portfolio/loka.jpeg'
+        description: 'Develop Loka Academy LMS (Learning Management System)'
         tags:
-          - Tag 1
-          - Tag 2
-      - name: Project 2
-        image: '/images/portfolio/code.jpg'
-        link: https://gohugo.io/
-        description: 'You can click on [**this link**](#codingprojects) to scroll to my Coding Projects portfolio'
+          - Golang
+          - Mongodb
+      - name: Loka Academy Website
+        image: '/images/portfolio/loka.jpeg'
+        link: https://lokaacademy.com/
+        description: 'Loka Academy Official Website'
         tags:
-          - Tag 1
-          - Tag 2
-      - name: Project 3
+          - Golang
+          - Go Fiber
+      - name: REST API with Mongodb
         image: '/images/portfolio/code.jpg'
-        link: https://gohugo.io/
-        description: 'A description'
+        link: https://lokaacademy.com/
+        description: 'Research implementation golang with mongodb'
         tags:
-          - Tag 1
-          - Tag 2
+          - Golang
+          - Mongodb
