feat(blog): add new post

--- a/exampleSite/config/_default/params.toml
+++ b/exampleSite/config/_default/params.toml
@@ -3,7 +3,7 @@ title = "I'm Nal"
 author = "Nal Farid"
 #copyright = "2020-2021"
 description = "Call me Nal"
-profilePicture = "images/enal-pic.jpeg"
+profilePicture = "images/nalfarid.jpeg"
 keywords = ""
 favicon = "favicons/"
 # example ["css/custom.css"]
